src/regex_34401a.c
/* Generated by re2c 3.0 on Thu Oct  1 19:15:30 2026 */
/* regex_34401a.re
   Copyright (C) 2026 Timo Kokkonen <tjko@iki.fi>

   SPDX-License-Identifier: GPL-3.0-or-later

   This file is part of LcdPico

   LcdPico is free software: you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
   the Free Software Foundation, either version 3 of the License, or
   (at your option) any later version.

   LcdPico is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
   GNU General Public License for more details.

   You should have received a copy of the GNU General Public License
   along with LcdPico. If not, see <https://www.gnu.org/licenses/>.


   Generate regex.c using: re2c regex_34401a.re -o regex_34401a.c -i --case-ranges
*/

#include <stdio.h>
#include <stdbool.h>
#include "regex_34401a.h"


bool regex_valid_reading(const char *s)
{
	const char *YYCURSOR = s;
	const char *YYMARKER;


{
	char yych;
	yych = *YYCURSOR;
	switch (yych) {
		case ' ': goto yy3;
		case '+':
		case '-': goto yy4;
		case '0' ... '9': goto yy5;
		case 'O': goto yy6;
		default: goto yy1;
	}
yy1:
	++YYCURSOR;
yy2:
	{ return false; }
yy3:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case ' ': goto yy7;
		case '0' ... '9': goto yy9;
		case 'O': goto yy10;
		default: goto yy2;
	}
yy4:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case ' ': goto yy11;
		case '0' ... '9': goto yy9;
		default: goto yy2;
	}
yy5:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case ' ':
		case 'A':
		case 'D':
		case 'G' ... 'H':
		case 'K':
		case 'M':
		case 'O':
		case 'S':
		case 'U' ... 'V':
		case 'a':
		case 'd':
		case 'g' ... 'h':
		case 'k':
		case 'm':
		case 'o':
		case 's':
		case 'u' ... 'v': goto yy13;
		case '.': goto yy14;
		case '0' ... '9': goto yy9;
		default: goto yy2;
	}
yy6:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case '.': goto yy21;
		case 'P': goto yy22;
		default: goto yy2;
	}
yy7:
	yych = *++YYCURSOR;
	switch (yych) {
		case ' ': goto yy7;
		case '0' ... '9': goto yy9;
		case 'O': goto yy10;
		default: goto yy8;
	}
yy8:
	YYCURSOR = YYMARKER;
	goto yy2;
yy9:
	yych = *++YYCURSOR;
	switch (yych) {
		case ' ': goto yy12;
		case '.': goto yy14;
		case '0' ... '9': goto yy9;
		case 'A':
		case 'V':
		case 'a':
		case 'v': goto yy15;
		case 'D':
		case 'd': goto yy16;
		case 'G':
		case 'K':
		case 'M':
		case 'U':
		case 'g':
		case 'k':
		case 'm':
		case 'u': goto yy17;
		case 'H':
		case 'h': goto yy18;
		case 'O':
		case 'o': goto yy19;
		case 'S':
		case 's': goto yy20;
		default: goto yy8;
	}
yy10:
	yych = *++YYCURSOR;
	switch (yych) {
		case '.': goto yy21;
		case 'P': goto yy22;
		default: goto yy8;
	}
yy11:
	yych = *++YYCURSOR;
	switch (yych) {
		case ' ': goto yy11;
		case '0' ... '9': goto yy9;
		default: goto yy8;
	}
yy12:
	yych = *++YYCURSOR;
yy13:
	switch (yych) {
		case ' ': goto yy12;
		case 'A':
		case 'V':
		case 'a':
		case 'v': goto yy15;
		case 'D':
		case 'd': goto yy16;
		case 'G':
		case 'K':
		case 'M':
		case 'U':
		case 'g':
		case 'k':
		case 'm':
		case 'u': goto yy17;
		case 'H':
		case 'h': goto yy18;
		case 'O':
		case 'o': goto yy19;
		case 'S':
		case 's': goto yy20;
		default: goto yy8;
	}
yy14:
	yych = *++YYCURSOR;
	switch (yych) {
		case '0' ... '9': goto yy23;
		default: goto yy8;
	}
yy15:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'A':
		case 'D':
		case 'a':
		case 'd': goto yy24;
		default: goto yy8;
	}
yy16:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'B':
		case 'b': goto yy25;
		default: goto yy8;
	}
yy17:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'A':
		case 'V':
		case 'a':
		case 'v': goto yy15;
		case 'D':
		case 'd': goto yy16;
		case 'H':
		case 'h': goto yy18;
		case 'O':
		case 'o': goto yy19;
		case 'S':
		case 's': goto yy20;
		default: goto yy8;
	}
yy18:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'Z':
		case 'z': goto yy25;
		default: goto yy8;
	}
yy19:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'H':
		case 'h': goto yy27;
		default: goto yy8;
	}
yy20:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'E':
		case 'e': goto yy24;
		default: goto yy8;
	}
yy21:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'V': goto yy28;
		default: goto yy8;
	}
yy22:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'E': goto yy29;
		default: goto yy8;
	}
yy23:
	yych = *++YYCURSOR;
	switch (yych) {
		case ' ': goto yy12;
		case '0' ... '9': goto yy23;
		case 'A':
		case 'V':
		case 'a':
		case 'v': goto yy15;
		case 'D':
		case 'd': goto yy16;
		case 'G':
		case 'K':
		case 'M':
		case 'U':
		case 'g':
		case 'k':
		case 'm':
		case 'u': goto yy17;
		case 'H':
		case 'h': goto yy18;
		case 'O':
		case 'o': goto yy19;
		case 'S':
		case 's': goto yy20;
		default: goto yy8;
	}
yy24:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'C':
		case 'c': goto yy25;
		default: goto yy8;
	}
yy25:
	yych = *++YYCURSOR;
	switch (yych) {
		case ' ': goto yy25;
		default: goto yy26;
	}
yy26:
	{ return true;}
yy27:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'M':
		case 'm': goto yy25;
		default: goto yy8;
	}
yy28:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'L': goto yy30;
		default: goto yy8;
	}
yy29:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'N': goto yy31;
		default: goto yy8;
	}
yy30:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'D': goto yy33;
		default: goto yy8;
	}
yy31:
	yych = *++YYCURSOR;
	switch (yych) {
		case ' ': goto yy31;
		default: goto yy32;
	}
yy32:
	{ return true; }
yy33:
	yych = *++YYCURSOR;
	switch (yych) {
		case ' ': goto yy34;
		default: goto yy8;
	}
yy34:
	yych = *++YYCURSOR;
	switch (yych) {
		case ' ': goto yy34;
		case 'A':
		case 'V':
		case 'a':
		case 'v': goto yy35;
		case 'D':
		case 'd': goto yy36;
		case 'G':
		case 'K':
		case 'M':
		case 'U':
		case 'g':
		case 'k':
		case 'm':
		case 'u': goto yy37;
		case 'H':
		case 'h': goto yy38;
		case 'O':
		case 'o': goto yy39;
		case 'S':
		case 's': goto yy40;
		default: goto yy8;
	}
yy35:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'A':
		case 'D':
		case 'a':
		case 'd': goto yy41;
		default: goto yy8;
	}
yy36:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'B':
		case 'b': goto yy31;
		default: goto yy8;
	}
yy37:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'A':
		case 'V':
		case 'a':
		case 'v': goto yy35;
		case 'D':
		case 'd': goto yy36;
		case 'H':
		case 'h': goto yy38;
		case 'O':
		case 'o': goto yy39;
		case 'S':
		case 's': goto yy40;
		default: goto yy8;
	}
yy38:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'Z':
		case 'z': goto yy31;
		default: goto yy8;
	}
yy39:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'H':
		case 'h': goto yy42;
		default: goto yy8;
	}
yy40:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'E':
		case 'e': goto yy41;
		default: goto yy8;
	}
yy41:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'C':
		case 'c': goto yy31;
		default: goto yy8;
	}
yy42:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'M':
		case 'm': goto yy31;
		default: goto yy8;
	}
}

}


bool regex_in_menu(const char *s)
{
	const char *YYCURSOR = s;
	const char *YYMARKER;


{
	char yych;
	yych = *YYCURSOR;
	switch (yych) {
		case ' ': goto yy46;
		case '0' ... '9': goto yy47;
		case 'A' ... 'B':
		case 'D':
		case 'F' ... 'L':
		case 'N' ... 'O':
		case 'Q' ... 'S':
		case 'U' ... 'Z': goto yy48;
		case 'C': goto yy49;
		case 'E': goto yy50;
		case 'M': goto yy51;
		case 'P': goto yy52;
		case 'T': goto yy53;
		case 'c': goto yy54;
		case 'e': goto yy55;
		case 'm': goto yy56;
		case 'p': goto yy57;
		case 't': goto yy58;
		default: goto yy44;
	}
yy44:
	++YYCURSOR;
yy45:
	{ return false; }
yy46:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case ' ': goto yy59;
		case 'C':
		case 'c': goto yy61;
		case 'E':
		case 'e': goto yy62;
		case 'M':
		case 'm': goto yy63;
		case 'P':
		case 'p': goto yy64;
		case 'T':
		case 't': goto yy65;
		default: goto yy45;
	}
yy47:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case ':': goto yy66;
		default: goto yy45;
	}
yy48:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case ':': goto yy67;
		default: goto yy45;
	}
yy49:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case ':': goto yy67;
		case 'O':
		case 'o': goto yy68;
		default: goto yy45;
	}
yy50:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case ':': goto yy67;
		case 'X':
		case 'x': goto yy69;
		default: goto yy45;
	}
yy51:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case ':': goto yy67;
		case 'E':
		case 'e': goto yy70;
		default: goto yy45;
	}
yy52:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case ':': goto yy67;
		case 'A':
		case 'a': goto yy71;
		default: goto yy45;
	}
yy53:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case ':': goto yy67;
		case 'O':
		case 'o': goto yy72;
		default: goto yy45;
	}
yy54:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 'O':
		case 'o': goto yy68;
		default: goto yy45;
	}
yy55:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 'X':
		case 'x': goto yy69;
		default: goto yy45;
	}
yy56:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 'E':
		case 'e': goto yy70;
		default: goto yy45;
	}
yy57:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 'A':
		case 'a': goto yy71;
		default: goto yy45;
	}
yy58:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 'O':
		case 'o': goto yy72;
		default: goto yy45;
	}
yy59:
	yych = *++YYCURSOR;
	switch (yych) {
		case ' ': goto yy59;
		case 'C':
		case 'c': goto yy61;
		case 'E':
		case 'e': goto yy62;
		case 'M':
		case 'm': goto yy63;
		case 'P':
		case 'p': goto yy64;
		case 'T':
		case 't': goto yy65;
		default: goto yy60;
	}
yy60:
	YYCURSOR = YYMARKER;
	goto yy45;
yy61:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'O':
		case 'o': goto yy68;
		default: goto yy60;
	}
yy62:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'X':
		case 'x': goto yy69;
		default: goto yy60;
	}
yy63:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'E':
		case 'e': goto yy70;
		default: goto yy60;
	}
yy64:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'A':
		case 'a': goto yy71;
		default: goto yy60;
	}
yy65:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'O':
		case 'o': goto yy72;
		default: goto yy60;
	}
yy66:
	yych = *++YYCURSOR;
	switch (yych) {
		case ' ': goto yy73;
		default: goto yy60;
	}
yy67:
	yych = *++YYCURSOR;
	switch (yych) {
		case ' ': goto yy74;
		default: goto yy60;
	}
yy68:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'M':
		case 'm': goto yy75;
		default: goto yy60;
	}
yy69:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'I':
		case 'i': goto yy76;
		default: goto yy60;
	}
yy70:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'N':
		case 'n': goto yy77;
		default: goto yy60;
	}
yy71:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'R':
		case 'r': goto yy78;
		default: goto yy60;
	}
yy72:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'P':
		case 'p': goto yy79;
		default: goto yy60;
	}
yy73:
	yych = *++YYCURSOR;
	switch (yych) {
		case ' ':
		case '-':
		case '/':
		case 'A' ... 'a': goto yy80;
		default: goto yy60;
	}
yy74:
	yych = *++YYCURSOR;
	switch (yych) {
		case ' ':
		case '-':
		case '/':
		case 'A' ... 'a': goto yy82;
		default: goto yy60;
	}
yy75:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'M':
		case 'm': goto yy84;
		default: goto yy60;
	}
yy76:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'T':
		case 't': goto yy85;
		default: goto yy60;
	}
yy77:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'U':
		case 'u': goto yy86;
		default: goto yy60;
	}
yy78:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'A':
		case 'a': goto yy87;
		default: goto yy60;
	}
yy79:
	yych = *++YYCURSOR;
	switch (yych) {
		case ' ': goto yy88;
		default: goto yy60;
	}
yy80:
	yych = *++YYCURSOR;
	switch (yych) {
		case ' ':
		case '-':
		case '/':
		case 'A' ... 'a': goto yy80;
		default: goto yy81;
	}
yy81:
	{ return true; }
yy82:
	yych = *++YYCURSOR;
	switch (yych) {
		case ' ':
		case '-':
		case '/':
		case 'A' ... 'a': goto yy82;
		default: goto yy83;
	}
yy83:
	{ return true; }
yy84:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'A':
		case 'a': goto yy89;
		default: goto yy60;
	}
yy85:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'I':
		case 'i': goto yy90;
		default: goto yy60;
	}
yy86:
	yych = *++YYCURSOR;
	switch (yych) {
		case ' ': goto yy91;
		case 'S':
		case 's': goto yy92;
		default: goto yy60;
	}
yy87:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'M':
		case 'm': goto yy94;
		default: goto yy60;
	}
yy88:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'O':
		case 'o': goto yy95;
		default: goto yy60;
	}
yy89:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'N':
		case 'n': goto yy96;
		default: goto yy60;
	}
yy90:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'N':
		case 'n': goto yy97;
		default: goto yy60;
	}
yy91:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'B':
		case 'b': goto yy98;
		default: goto yy60;
	}
yy92:
	yych = *++YYCURSOR;
	switch (yych) {
		case ' ': goto yy92;
		default: goto yy93;
	}
yy93:
	{ return true; }
yy94:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'E':
		case 'e': goto yy99;
		default: goto yy60;
	}
yy95:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'F':
		case 'f': goto yy100;
		default: goto yy60;
	}
yy96:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'D':
		case 'd': goto yy101;
		default: goto yy60;
	}
yy97:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'G':
		case 'g': goto yy100;
		default: goto yy60;
	}
yy98:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'O':
		case 'o': goto yy102;
		default: goto yy60;
	}
yy99:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'T':
		case 't': goto yy103;
		default: goto yy60;
	}
yy100:
	yych = *++YYCURSOR;
	switch (yych) {
		case ' ': goto yy104;
		default: goto yy60;
	}
yy101:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'S':
		case 's': goto yy92;
		default: goto yy60;
	}
yy102:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'T':
		case 't': goto yy105;
		default: goto yy60;
	}
yy103:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'E':
		case 'e': goto yy106;
		default: goto yy60;
	}
yy104:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'M':
		case 'm': goto yy107;
		default: goto yy60;
	}
yy105:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'T':
		case 't': goto yy108;
		default: goto yy60;
	}
yy106:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'R':
		case 'r': goto yy92;
		default: goto yy60;
	}
yy107:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'E':
		case 'e': goto yy109;
		default: goto yy60;
	}
yy108:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'O':
		case 'o': goto yy110;
		default: goto yy60;
	}
yy109:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'N':
		case 'n': goto yy111;
		default: goto yy60;
	}
yy110:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'M':
		case 'm': goto yy92;
		default: goto yy60;
	}
yy111:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'U':
		case 'u': goto yy92;
		default: goto yy60;
	}
}

}


bool regex_text_display(const char *s)
{
	const char *YYCURSOR = s;
//	const char *YYMARKER;


{
	char yych;
	yych = *YYCURSOR;
	switch (yych) {
		case ' ':
		case '+' ... '9':
		case 'A' ... 'a': goto yy114;
		default: goto yy113;
	}
yy113:
	++YYCURSOR;
	{ return false; }
yy114:
	yych = *++YYCURSOR;
	switch (yych) {
		case ' ':
		case '+' ... '9':
		case 'A' ... 'a': goto yy114;
		default: goto yy115;
	}
yy115:
	{ return true; }
}

}

